[CRT] * Partial update of scanf routines. Focus was on the case of reading a float. * Don't inline float processing, introduce _internal_handle_float() and co to take care of this. Brought to you by Timo. * Msvcrt scanf tests are now green. CORE-7005 #resolve #comment Should be fixed in r63443. Thanks Dmitry ;) CORE-8080

svn path=/trunk/; revision=63443